# device-payload-schema

./: .cursorrules  .gitignore  LICENSE  Makefile  README.md  SESSION-NOTES.md  buf.gen.yaml  buf.yaml  pyproject.toml  requirements.txt  test-requirements-map.yaml
bindings/: README.md
docs/: AUDIT-REPORT.md  BIDIRECTIONAL-CODEC.md  BINARY-SCHEMA-MIGRATION.md  C-CODE-GENERATION.md  C-INTERPRETER-STATUS.md  CODEC-ANALYSIS-NOTES.md  CPP-REFLECTION-ROADMAP.md  FAQ.md  FORMULA-MIGRATION-TRACKING.md  FUTURE-FEATURES.md  GETTING-STARTED.md  IMPLEMENTATION-PLAN.md  INTEGRATION-LAYER.md  IPSO-REFERENCE.md  LANGUAGE-ANALYSIS.md  OPC-UA-INTEGRATION.md  OPC-UA-REQUIREMENTS-AUDIT.md  OUTPUT-FORMATS.md  PLAN.md  PROTOTYPE-DEVELOPMENT-GUIDE.md  SCHEMA-DEVELOPMENT-GUIDE.md  SCHEMA-LANGUAGE-REFERENCE.md  SESSION-NOTES-2026-02-25.md  SPEC-IMPLEMENTATION-STATUS.md  TS013-COMPLIANCE-ANALYSIS.md  TTN-CODEC-CONVERSION-GUIDE.md  WOT-REFERENCE.md
dotnet/: PayloadSchema.sln
examples/: README.md  embedded_decoder.h  env_sensor.yaml  env_sensor_resolved.yaml  env_sensor_with_lib.yaml  env_sensor_with_lib_resolved.yaml  lib_sensors_test.yaml  lib_sensors_test_resolved.yaml  multi_sensor_rename.yaml  multi_sensor_rename_resolved.yaml  multi_sensor_resolved.yaml  opc_ua_semantics.yaml
fuzz/: README.md  fuzz_decoder.c
include/: env_sensor_codec.h  rt.h  schema_interpreter.h  schema_interpreter.hpp  selftests.h  sys.h
lib/: README.md  SEMANTIC-MAPPING.md
schemas/: ipso-output.schema.json  payload-schema.json  senml-output.schema.json  ttn-output.schema.json
src/: benchmark.cpp  (+17 more)
(+731 files in other folders)
